@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-10T08:15:29Z",
+  "timestamp" : "2024-05-10T16:15:29Z",
   "count_outdated" : 1647,
   "uniques_outdated" : 903,
-  "count" : 1652,
+  "count" : 1653,
   "uniques" : 908,
   "clones" : [
     {
@@ -34,9 +34,9 @@
     },
     {
       "timestamp": "2024-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
